CHANGES IN VERSION 1.29.2
-------------------------

UTILITIES

    o show a warning when an unsorted index is used in `seqSetFilter()`

    o show a message if `seqVCF_Header()` fails

BUG FIXES

    o `seqVCF_Header()` fixes 'contig' in the header of VCF if there are
      different fields


CHANGES IN VERSION 1.28.1
-------------------------

BUG FIXES

    o `seqRecompress(, verbose=FALSE)` works correctly

    o `seqSetFilter(, action="push+set")` should not reset the filter
      before setting a new filter


CHANGES IN VERSION 1.28.0
-------------------------

NEW FEATURES

    o new functions `seqUnitSlidingWindows()`, `seqUnitApply()`,
      `seqUnitFilterCond()`

    o new variable "$variant_index", "$sample_index" in `SeqGetData()`,
      `seqBlockApply()` and `seqUnitApply()` to get the indices of selected
      variants

    o new arguments '.padNA' and '.envir' in `seqGetData()`

    o new functions `seqSetFilterAnnotID()` and `seqGDS2BED()`

    o multicore function in `seqBED2GDS(, parallel=)`

    o new package-wide option `options(seqarray.nofork=TRUE)` to disable forking

    o new option 'minor' in `seqAlleleFreq()` and `seqAlleleCount()`

    o new option 'verbose' in `seqMissing()`, `seqAlleleFreq()` and
      `seqAlleleCount()`; '.progress' is deprecated, but still can be used
      for compatiblity

    o `seqAlleleFreq()`, `seqAlleleCount()`, `seqMissing()`,
      `seqSetFilterCond()` work on 'annotation/format/DS', if 'genotype/data'
      is not available

UTILITIES

    o `seqAddValue()` adds vectors, matrices and data frame to "annotation/info"

    o `seqBED2GDS()` allows a single file name without the extended file names
      (.bed, .fam, .bim)

    o allele flip in `seqBED2GDS()` to allow major allele to be reference

    o rewrite `seqGetData()` for faster loading

    o significantly improve `seqBlockApply()` on 'annotation/info/VARIABLE'
      (https://github.com/zhengxwen/SeqArray/issues/59)
